add var tabletMax viewport

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -40,6 +40,7 @@ $radiusButtonFilterMobile: 2px;
 $radiusButtonOutlineMobile: 2px;
 
 //viewports
+$tabletMax: 1024px;
 $tablet: 991px;
 $tabletMedium: 767px;
 $mobile: 471px;
