--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,11 +2,13 @@
 $black: #000;
 $black2: #080B11;
 $black3: #2B2B2B;
+$black4: #2b232e;
 $gray: rgba(0, 0, 0, .48);
 $gray2: rgba(0, 0, 0, .65);
 $gray3: rgba(8, 11, 17, .65);
 $gray4: #747278;
-$gray5: #BFBFBF;
+$gray5: #737277;
+$gray6: #BFBFBF;
 $white: #fff;
 $white2: rgba(255, 255, 255, .65);
 $white3: #F2F2F2;
@@ -38,6 +40,8 @@ $radiusButtonMobile: 2px;
 $radiusButtonFilter: 4px;
 $radiusButtonFilterMobile: 2px;
 $radiusButtonOutlineMobile: 2px;
+$radiusMenuLink: 4px;
+$radiusMenuLinkMobile: 2px;
 
 //viewports
 $tabletMax: 1024px;
