--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,17 @@
+@import "./_mixins.scss";
+
 body {
   font-family: 'Montserrat', sans-serif;
   padding: 0;
   margin: 0;
+  min-height: 100vh;
+
+  > svg[aria-hidden=true] {
+    position: absolute;
+  }
+}
+
+#root {
+  @include min-max(320px, 100%, 0);
+  //min-height: 100vh;
 }
