--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,7 +1,26 @@
+@import "./variables";
+
 @mixin min-max($minWidth, $maxWidth, $paddingX) {
   max-width: $maxWidth;
   min-width: $minWidth;
   padding: 0 $paddingX;
   box-sizing: border-box;
   margin: 0 auto;
+}
+
+@mixin head-divider {
+  content: '';
+  display: block;
+  background: $blue;
+  border-radius: 15px;
+  width: 107px;
+  height: 4px;
+  margin: 24px auto 0;
+
+
+  @media (max-width: $tabletMedium) {
+    width: 70px;
+    height: 2px;
+    margin-top: 15px;
+  }
 }
