--- a/src/components/Navigation/NavigationMobile/NavigationMobile.module.scss
+++ b/src/components/Navigation/NavigationMobile/NavigationMobile.module.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   padding: 50px;
   display: flex;
+  z-index: 10;
 
   @media (min-width: $tablet) {
     display: none;
