--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -60,3 +60,32 @@
   white-space: nowrap;
   border: 0;
 }
+
+@mixin section-header {
+  color: $blue;
+  opacity: 0.48;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 16px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+}
+
+@mixin section-subtitle {
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 50px;
+  color: $black2;
+  margin: 8px 0 40px;
+
+  @media (max-width: $tablet) {
+    font-size: 28px;
+    line-height: 34px;
+  }
+
+  @media (max-width: $mobile) {
+    font-size: 24px;
+    line-height: 29px;
+  }
+}
