--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -58,7 +58,8 @@ $mobile: 471px;
 //container and wrappers
 $container: 1920px;
 
-$wrapperMain: 824px;
+//$wrapperMain: 824px;
+$wrapperMain: 854px; // with padding
 $wrapper: 1282px;
 $wrapper2: 1254px;
 $wrapper3: 1214px;
