--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -63,3 +63,8 @@ $wrapperMain: 854px; // with padding
 $wrapper: 1282px;
 $wrapper2: 1254px;
 $wrapper3: 1214px;
+
+$wrapperDesktop: 1280px;
+$wrapperTabletMax: 854px;
+$wrapperTabletMedium: 500px;
+$wrapperMobile: 328px;
