adaptive banner and main projects

--- a/src/components/Banner/BannerList/BannerList.module.scss
+++ b/src/components/Banner/BannerList/BannerList.module.scss
@@ -1,8 +1,14 @@
+@import "../../../styles/variables";
+
 .List {
 }
 
 .Slider {
   height: 250px;
+
+  @media (max-width: $tabletMedium) {
+    height: 150px;
+  }
 }
 
 .Slide {
