--- a/src/components/MainProjects/MainProjects.module.scss
+++ b/src/components/MainProjects/MainProjects.module.scss
@@ -1,7 +1,9 @@
 @import "../../styles/variables";
 @import "../../styles/mixins";
 
-.Projects {}
+.Projects {
+  margin: 40px 0;
+}
 
 .Title {
   @include section-header;
