--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,10 +13,12 @@ $gray5: #737277;
 $gray6: #BFBFBF;
 $gray7: #383D45;
 $gray8: #DADADA;
+$gray9: #EDEDED;
 $white: #fff;
 $white2: rgba(255, 255, 255, .65);
 $white3: #F2F2F2;
 $blue: #0273BA;
+$blueOpacity: rgba(2, 115, 186, .65);
 $blue2: #526ED3;
 $blue3: #EBEFFF;
 $orange: #F27405;
