fix main slider img

--- a/src/components/MainSlider/MainSliderItem/MainSliderItem.module.scss
+++ b/src/components/MainSlider/MainSliderItem/MainSliderItem.module.scss
@@ -19,14 +19,14 @@
   right: 5.2%;
   color: #fff;
 
-  @media (max-width: $mobile) {
-    bottom: auto;
-    top: 0;
-    left: 0;
-    right: auto;
-    transform: translate(-50%, -50%);
-    width: 308px;
-  }
+  //@media (max-width: $mobile) {
+  //  bottom: auto;
+  //  top: 0;
+  //  left: 0;
+  //  right: auto;
+  //  //transform: translate(-50%, -50%);
+  //  width: 308px;
+  //}
 
 }
 
