add link more to main news section

--- a/src/components/MainNews/MainNews.module.scss
+++ b/src/components/MainNews/MainNews.module.scss
@@ -3,6 +3,15 @@
 
 .MainNews {
   margin: 40px 0;
+
+  .ButtonMore {
+    margin-left: auto;
+    display: block;
+
+    @media (max-width: $mobile) {
+      display: none;
+    }
+  }
 }
 
 .Title {
