--- a/src/components/MainProjects/MainProjects.module.scss
+++ b/src/components/MainProjects/MainProjects.module.scss
@@ -7,6 +7,10 @@
   .ButtonMore {
     margin-left: auto;
     display: block;
+
+    @media (max-width: $mobile) {
+      display: none;
+    }
   }
 }
 
